# nutri-tracker-web

./: .env.example  .gitignore  Makefile  README.md  README_DEV_BUILD.md
apps/mobile/: .env.example  App.tsx  app.json  package-lock.json  package.json
apps/mobile/components/: BodyAvatarSvg.tsx
apps/mobile/src/i18n/: index.tsx
apps/mobile/src/platform/: upload.ts
apps/mobile/src/social/: api.ts  presentation.ts  (+2 more)
infra/: docker-compose.yml
services/api/: .env.example  alembic.ini  pyproject.toml
services/api/alembic/: env.py
services/api/alembic/versions/: 20260223_0001_init.py  20260223_0004_product_image_url.py  20260223_0005_body_tracking_logs.py  20260225_0010_growth_features.py  20260302_0011_pending_registration.py  20260303_0012_usernames.py  20260303_0013_product_search_indexes.py  20260303_0014_account_birthdate_sex.py  20260304_0015_perf_composite_indexes.py  20260305_0016_meal_photo_analysis_cache.py  20260319_0021_meal_plan.py
services/api/app/: config.py  database.py  main.py  models.py  schemas.py
services/api/app/api/: routes.py
services/api/app/services/: ai_keys.py  auth.py  body_metrics.py  email.py  graph_recommendations.py  meal_estimate.py  nutrition.py  openfoodfacts.py  password_policy.py  rate_limit.py  vision_ai.py
services/api/tests/: conftest.py  test_auth_otp.py  test_auth_profile.py  test_body_metrics.py  test_body_tracking_api.py  test_community_foods.py  test_growth_features.py  test_intakes.py  test_meal_photo_estimate.py  test_meal_plan.py  test_password_policy.py  test_products.py  test_recipes.py  test_social.py
(+24 files in other folders)
