[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]

[tool.setuptools.package-data]
app = ["data/*.txt"]

[project]
name = "nutri-tracker-api"
version = "0.1.0"
description = "FastAPI backend for Nutri Tracker MVP"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlmodel>=0.0.22",
  "alembic>=1.13.0",
  "psycopg[binary]>=3.2.0",
  "httpx>=0.27.0",
  "python-multipart>=0.0.9",
  "pydantic-settings>=2.4.0",
  "email-validator>=2.2.0",
  "cryptography>=43.0.0",
  "pillow>=10.4.0",
  "pytesseract>=0.3.13",
  "neo4j>=5.28.1"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.6.0"
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 120

target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
